// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application/Modal Default smoke-test 1`] = `
<div class="gi-h-[400px]">
  <div>
    <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
      Open Modal
    </button>
    <div class="gi-modal gi-modal-close"
         data-element="modal"
    >
      <div class="gi-modal-container">
        <button class="gi-btn gi-btn-flat-dark gi-icon-btn-large undefined gi-modal-icon">
          <span role="presentation"
                class=" material-icons  gi-block 24px"
                style="font-size: 24px;"
          >
            close
          </span>
        </button>
        <h2 class="gi-heading-lg">
          Title
        </h2>
        <p class="gi-paragraph-md gi-text-start gi-whitespace-normal ">
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt esse magnam quis sit soluta cupiditate at deserunt exercitationem voluptas doloribus asperiores
        </p>
        <div class="gi-flex gi-gap-6 gi-justify-end">
          <button class="gi-btn gi-btn-secondary-dark gi-btn-regular undefined">
            Cancel action
          </button>
          <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
            Primary action
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Application/Modal ModalOpen smoke-test 1`] = `
<div class="gi-h-[400px]">
  <div>
    <div class="gi-modal gi-modal-open"
         data-element="modal"
    >
      <div class="gi-modal-container">
        <button class="gi-btn gi-btn-flat-dark gi-icon-btn-large undefined gi-modal-icon">
          <span role="presentation"
                class=" material-icons  gi-block 24px"
                style="font-size: 24px;"
          >
            close
          </span>
        </button>
        <h2 class="gi-heading-lg">
          Title
        </h2>
        <p class="gi-paragraph-md gi-text-start gi-whitespace-normal ">
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt esse magnam quis sit soluta cupiditate at deserunt exercitationem voluptas doloribus asperiores
        </p>
        <div class="gi-flex gi-gap-6 gi-justify-end">
          <button class="gi-btn gi-btn-secondary-dark gi-btn-regular undefined">
            Cancel action
          </button>
          <button class="gi-btn gi-btn-primary gi-btn-regular undefined">
            Primary action
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
